--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
     "dev": "next dev",
     "build": "next build",
     "typecheck": "tsc",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.2",
+    "@chakra-ui/react": "^1.1.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
+    "framer-motion": "^3.1.1",
     "gray-matter": "^4.0.2",
     "mongodb": "^3.6.3",
     "next": "10.0.4",
+    "node-mocks-http": "^1.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "13.0.0",
@@ -21,15 +29,22 @@
     "swr": "^0.3.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@testing-library/dom": "^7.29.2",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.19",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -38,11 +53,11 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4",
-    "postcss": "^8.2.2",
-    "postcss-preset-env": "^6.7.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^2.0.2",
+    "react-test-renderer": "^17.0.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   }
