--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "typecheck": "tsc",
     "start": "next start",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "update-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
@@ -23,6 +24,7 @@
     "node-mocks-http": "^1.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
     "styled-components": "^5.2.1",
