--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["next/babel", "@babel/preset-react"]
+  "presets": ["next/babel", "@babel/preset-react"],
+  "plugins": [["styled-components", { "ssr": true }]]
 }
