--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,24 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true,
+    "node": true
   },
   "extends": [
     "airbnb",
-    "prettier/react",
     "prettier",
     "eslint:recommended",
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
     "prettier",
-    "prettier/@typescript-eslint",
     "plugin:import/typescript"
   ],
+  "ignorePatterns": ["node_modules/*", ".next/*", ".out/*"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -70,6 +74,21 @@
     "react/jsx-props-no-spreading": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
+    "react/prop-types": "off",
+    // No need to import React when using Next.js
+    "react/react-in-jsx-scope": "off",
+    // This rule is not compatible with Next.js"s <Link /> components
+    "jsx-a11y/anchor-is-valid": "off",
+    // Why would you want unused vars?
+    "@typescript-eslint/no-unused-vars": ["error"],
+    // I suggest this setting for requiring return types on functions only where useful
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      {
+        "allowExpressions": true,
+        "allowConciseArrowFunctionExpressionsStartingWithVoid": true
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
