--- a/package.json
+++ b/package.json
@@ -7,61 +7,65 @@
     "typecheck": "tsc",
     "start": "next start",
     "test": "jest",
+    "lint": "tsc --noEmit && eslint '*.{js,jsx,ts,tsx}' --fix",
     "coverage": "jest --coverage",
     "update-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.2",
-    "@chakra-ui/react": "^1.1.0",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "classnames": "2.2.6",
-    "date-fns": "2.16.1",
-    "framer-motion": "^3.1.1",
-    "gray-matter": "^4.0.2",
-    "mongodb": "^3.6.3",
-    "next": "10.0.7",
-    "node-mocks-http": "^1.10.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.3",
+    "@chakra-ui/system": "^1.6.7",
+    "@chakra-ui/theme-tools": "^1.1.7",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "classnames": "2.3.1",
+    "date-fns": "2.22.1",
+    "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
+    "mongodb": "^3.6.9",
+    "next": "10.2.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-is": "17.0.2",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
-    "styled-components": "^5.2.1",
-    "swr": "^0.3.11"
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-react": "^7.12.10",
-    "@testing-library/dom": "^7.29.2",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.3",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.19",
-    "@types/mongodb": "^3.6.3",
-    "@types/node": "^14.14.16",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-test-renderer": "^17.0.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^26.0.23",
+    "@types/mongodb": "^3.6.17",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "babel-jest": "^27.0.2",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4",
-    "jest": "^26.6.3",
-    "jest-dom": "^4.0.0",
-    "prettier": "^2.2.1",
-    "raw-loader": "^4.0.2",
-    "react-test-renderer": "^17.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "jest": "^27.0.4",
+    "lint-staged": "^11.0.0",
+    "node-mocks-http": "^1.10.1",
+    "prettier": "2.3.1",
+    "react-test-renderer": "^17.0.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.2"
   }
 }
