--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "es5",
     "jsx": "preserve",
     "strict": true,
     "esModuleInterop": true,
@@ -23,7 +22,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "module": "esnext"
   },
   "include": [
     "next-env.d.ts",
